// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown matches snapshot 1`] = `
.c9 {
  display: inline-block;
  vertical-align: -.125em;
  overflow: hidden;
}

.c5 {
  cursor: pointer;
  border: none;
  margin: 0;
  padding: 0;
  background: none;
}

.c8 {
  cursor: pointer;
}

.c4 {
  overflow: visible;
}

.c0 .c3 + .c7 {
  height: 0;
  width: 0;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c0 .c3.focus-within + .c7 {
  height: unset;
  width: unset;
  -webkit-clip: unset;
  clip: unset;
  overflow: visible;
}

.c0 .c3:focus-within + .c7 {
  height: unset;
  width: unset;
  -webkit-clip: unset;
  clip: unset;
  overflow: visible;
}

.c0 .c3 > .c7 {
  height: unset;
  width: unset;
  -webkit-clip: unset;
  clip: unset;
  overflow: visible;
}

.c0 .c3.focus-within > .c7 {
  height: 0;
  width: 0;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c0 .c3:focus-within > .c7 {
  height: 0;
  width: 0;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c0 .c3 > *:not(.c7) {
  -webkit-animation: 100ms bcCCNc ease-out;
  animation: 100ms bcCCNc ease-out;
  position: absolute;
  box-shadow: 0 0.5rem 0.5rem 0 rgba(0,0,0,0.1);
  border: 1px solid #d5d5d5;
  top: calc(100% + 0.4rem);
  left: 0;
}

.c0 .c3 > *:not(.c7) {
  height: 0;
  width: 0;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c0 .c3.focus-within > *:not(.c7) {
  height: unset;
  width: unset;
  -webkit-clip: unset;
  clip: unset;
  overflow: visible;
}

.c0 .c3:focus-within > *:not(.c7) {
  height: unset;
  width: unset;
  -webkit-clip: unset;
  clip: unset;
  overflow: visible;
}

.c1 {
  overflow: visible;
  position: relative;
}

.c11 {
  height: 2rem;
  width: 2rem;
  padding: 0.2rem;
  color: #424242;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c11:hover {
  color: #818181;
}

.c6 {
  border: none;
  display: block;
}

.c6 > div {
  display: inline-block;
  outline: none;
}

.c12 {
  list-style: none;
  margin: 0;
  padding: 0.6rem 0;
  background: #f5f5f5;
  z-index: 1;
}

.c12 li {
  padding: 0.2rem;
}

.c12 li button,
.c12 li a {
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: left;
  cursor: pointer;
  outline: none;
  border: none;
  padding-left: 0.8rem;
  margin: 0;
  height: 3rem;
  background: none;
  min-width: 7rem;
  color: #424242;
  font-size: 1.4rem;
  line-height: 2rem;
}

.c12 li button:hover,
.c12 li a:hover,
.c12 li button:focus,
.c12 li a:focus {
  background: #d5d5d5;
  outline: 0.2rem auto Highlight;
  outline: 0.2rem auto -webkit-focus-ring-color;
}

.c12.c12 {
  left: 0;
  right: unset;
}

.c2 .focus-within .c10 {
  color: #5e6062;
}

.c2:focus-within .c10 {
  color: #5e6062;
}

<div
  className="c0 c1 c2"
>
  <div
    className="c3 c4"
  >
    <button
      aria-label="Actions"
      className="c5 c6 c7 c8"
      tabIndex={0}
    >
      <div
        tabIndex={-1}
      >
        <svg
          aria-hidden="true"
          className="c9 c10 c11"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 192 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
            fill="currentColor"
          />
        </svg>
      </div>
    </button>
    <menu
      className="c12"
    >
      <li>
        <button
          onClick={[Function]}
          onMouseEnter={[Function]}
          tabIndex={0}
          type="button"
        >
          Delete
        </button>
      </li>
      <li>
        <a
          href="/wooo"
          onClick={[Function]}
          onMouseEnter={[Function]}
          role="button"
          tabIndex={0}
        >
          Edit
        </a>
      </li>
    </menu>
  </div>
  <button
    aria-label="Actions"
    className="c5 c6 c7 c8"
    tabIndex={0}
  >
    <div
      tabIndex={-1}
    >
      <svg
        aria-hidden="true"
        className="c9 c10 c11"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 192 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
          fill="currentColor"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`Dropdown matches snapshot on right align 1`] = `
.c9 {
  display: inline-block;
  vertical-align: -.125em;
  overflow: hidden;
}

.c5 {
  cursor: pointer;
  border: none;
  margin: 0;
  padding: 0;
  background: none;
}

.c8 {
  cursor: pointer;
}

.c4 {
  overflow: visible;
}

.c0 .c3 + .c7 {
  height: 0;
  width: 0;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c0 .c3.focus-within + .c7 {
  height: unset;
  width: unset;
  -webkit-clip: unset;
  clip: unset;
  overflow: visible;
}

.c0 .c3:focus-within + .c7 {
  height: unset;
  width: unset;
  -webkit-clip: unset;
  clip: unset;
  overflow: visible;
}

.c0 .c3 > .c7 {
  height: unset;
  width: unset;
  -webkit-clip: unset;
  clip: unset;
  overflow: visible;
}

.c0 .c3.focus-within > .c7 {
  height: 0;
  width: 0;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c0 .c3:focus-within > .c7 {
  height: 0;
  width: 0;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c0 .c3 > *:not(.c7) {
  -webkit-animation: 100ms bcCCNc ease-out;
  animation: 100ms bcCCNc ease-out;
  position: absolute;
  box-shadow: 0 0.5rem 0.5rem 0 rgba(0,0,0,0.1);
  border: 1px solid #d5d5d5;
  top: calc(100% + 0.4rem);
  left: 0;
}

.c0 .c3 > *:not(.c7) {
  height: 0;
  width: 0;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c0 .c3.focus-within > *:not(.c7) {
  height: unset;
  width: unset;
  -webkit-clip: unset;
  clip: unset;
  overflow: visible;
}

.c0 .c3:focus-within > *:not(.c7) {
  height: unset;
  width: unset;
  -webkit-clip: unset;
  clip: unset;
  overflow: visible;
}

.c1 {
  overflow: visible;
  position: relative;
}

.c11 {
  height: 2rem;
  width: 2rem;
  padding: 0.2rem;
  color: #424242;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c11:hover {
  color: #818181;
}

.c6 {
  border: none;
  display: block;
}

.c6 > div {
  display: inline-block;
  outline: none;
}

.c12 {
  list-style: none;
  margin: 0;
  padding: 0.6rem 0;
  background: #f5f5f5;
  z-index: 1;
}

.c12 li {
  padding: 0.2rem;
}

.c12 li button,
.c12 li a {
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: left;
  cursor: pointer;
  outline: none;
  border: none;
  padding-left: 0.8rem;
  margin: 0;
  height: 3rem;
  background: none;
  min-width: 7rem;
  color: #424242;
  font-size: 1.4rem;
  line-height: 2rem;
}

.c12 li button:hover,
.c12 li a:hover,
.c12 li button:focus,
.c12 li a:focus {
  background: #d5d5d5;
  outline: 0.2rem auto Highlight;
  outline: 0.2rem auto -webkit-focus-ring-color;
}

.c12.c12 {
  right: 0;
  left: unset;
}

.c2 .focus-within .c10 {
  color: #5e6062;
}

.c2:focus-within .c10 {
  color: #5e6062;
}

<div
  className="c0 c1 c2"
>
  <div
    className="c3 c4"
  >
    <button
      aria-label="Actions"
      className="c5 c6 c7 c8"
      tabIndex={0}
    >
      <div
        tabIndex={-1}
      >
        <svg
          aria-hidden="true"
          className="c9 c10 c11"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 192 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
            fill="currentColor"
          />
        </svg>
      </div>
    </button>
    <menu
      className="c12"
      rightAlign={true}
    >
      <li>
        <button
          onClick={[Function]}
          onMouseEnter={[Function]}
          tabIndex={0}
          type="button"
        >
          Delete
        </button>
      </li>
      <li>
        <a
          href="/wooo"
          onClick={[Function]}
          onMouseEnter={[Function]}
          role="button"
          tabIndex={0}
        >
          Edit
        </a>
      </li>
    </menu>
  </div>
  <button
    aria-label="Actions"
    className="c5 c6 c7 c8"
    tabIndex={0}
  >
    <div
      tabIndex={-1}
    >
      <svg
        aria-hidden="true"
        className="c9 c10 c11"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 192 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
          fill="currentColor"
        />
      </svg>
    </div>
  </button>
</div>
`;
